# ImDoom64

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  AUTHORS  CMakeLists.txt  README.md  com.dotfloat.ImDoom64.yaml  meson.build  meson_options.txt
data/: imdoom64.6  imdoom64.appdata.xml.in  imdoom64.desktop.in
script/: macos_post_install.sh  meson_build_pk3.sh
src/engine/: CMakeLists.txt  app.cc  meson.build  wad.hh
src/engine/core/cvar/: data.hh  flag_desc.cc  flag_desc.hh  store.cc  store_iterator.hh
src/engine/core/log/: log.cc  logger.hh
src/engine/game/: g_actions.cc  g_demo.cc  g_game.cc
src/engine/image/: doom.cc  palette_cache.cc  png.cc
src/engine/image/detail/: image.hh
src/engine/misc/: m_menu.cc
src/engine/native_ui/: native_ui.hh  sdl2.cc
src/engine/native_ui/gtk3/: gtk3.cc
src/engine/net/: net_client.cc  net_server.cc
src/engine/opengl/: gl_main.cc
src/engine/parser/: sc_main.cc
src/engine/platform/: app.hh
src/engine/playloop/: map.cc  map.hh  p_mobj.cc  p_saveg.cc  p_setup.cc  p_setup.h  p_spec.cc  p_switch.cc
src/engine/renderer/: r_main.cc  r_scene.cc  r_things.cc
src/engine/sound/: rom_source.cc
src/engine/statusbar/: st_stuff.cc
src/engine/system/: i_audio.cc  i_main.cc  i_system.cc  n64_rom.cc  n64_rom.hh
src/engine/system/sdl2/: video.cc
src/engine/utility/: binary_reader.hh  convert.hh  lexical_cast.hh  optional.hh  radix_tree.hh  string_view.hh
src/engine/utility/radix_tree/: radix_tree.hpp  radix_tree_it.hpp  radix_tree_node.hpp
src/engine/wad/: device.cc  idevice.hh  ilump.cc  ilump.hh  lump.hh  lump_hash.hh  wad.cc  wad_loaders.hh
src/engine/wad/doom/: doom_wad.cc  map_lump.hh
src/engine/wad/rom/: device.cc  palette.cc
src/engine/wad/zip/: zip_wad.cc
src/gtk3/: CMakeLists.txt  console-window.vala  meson.build  rom-dialog.vala
src/gtk3/resource/: console-window.ui  nui-gtk3.gresource.xml  rom-dialog.ui
